# typing

./: .gitignore  Cargo.toml  README.md  index.html  typing-11454ead7b601ffe.js  typing-11454ead7b601ffe_bg.wasm  typing-9553a4c76a6adb2e.js  typing-9553a4c76a6adb2e_bg.wasm  typing-eb299a5d1332e946_bg.wasm  typing-ed015ab39a94f481.js  typing-ed015ab39a94f481_bg.wasm
res/: pseudowords.txt
src/: main.rs  word_index.rs
src/common/: mod.rs  structs.rs  symbols.rs  traits.rs  utils.rs
src/components/: character_display.rs  display_drawer.rs  mod.rs
