[package]
name = "typing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version = "0.4.5", features = ["csr", "nightly"] }
web-sys = {version = "0.3.64", features = ["DomRect"]}
wasm-bindgen = "0.2.87"
linked-hash-map = "0.5.4"

